--- a/material/base.html
+++ b/material/base.html
@@ -33,11 +33,11 @@
     {% endblock %}
     {% block htmltitle %}
       {% if page and page.meta and page.meta.title %}
-        <title>{{ page.meta.title }}</title>
+        <title>CETENS C1</title>
       {% elif page and page.title and not page.is_homepage %}
         <title>{{ page.title | striptags }} - {{ config.site_name }}</title>
       {% else %}
-        <title>{{ config.site_name }}</title>
+        <title>CETENS C1</title>
       {% endif %}
     {% endblock %}
     {% block styles %}
